2006-11-03  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/config.py: Provide initial values for config parameters.
	* qm/__init__.py: Use it.
	* qm/__version.py: Removed (since now obsolete).
	* qmdist/command/__init__.py: Add reset_config_variables.
	* scripts/qmtest-postinstall.py: Use it.
	* qmdist/command/install_lib.py: Use it.
	* qmdist/command/install_data.py: Removed (since now obsolete).
	* qmdist/command/build_py.py: New command; adjusts qm.prefix so it
	is usable in the build tree.
	* qmdist/command/build_doc.py: Modularize.
	* qmdist/command/check.py: Set PYTHONPATH so the right code gets tested.
	* qmdist/command/__init__.py: Adjust to always use qm.config.
	* setup.py: Adjust.
	* qm/test/result_reader.py: Fix fallout from last patch.
	* tests/xmldb/api.qms/test.qms/fields.qmt: Likewise.
	
2006-11-02  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/extension.py: Enhance handling of parameters and constructor arguments.
	* qm/test/database.py: Likewise.
	* qm/test/file_database.py: Likewise.
	* qm/test/file_result_reader.py: Likewise.
	* qm/test/file_result_stream.py: Likewise.
	* qm/test/result_stream.py: Likewise.
	* qm/test/runnable.py: Likewise.
	* qm/test/suite.py: Likewise.
	* qm/test/target.py: Likewise.
	* qm/test/classes/dejagnu_stream.py: Likewise.
	* qm/test/classes/pickle_result_stream.py: Likewise.
	* qm/test/classes/rsh_target.py: Likewise.
	* qm/test/classes/sql_result_stream.py: Likewise.
	* qm/test/classes/tet_stream.py: Likewise.
	* qm/test/classes/text_result_stream.py: Likewise.
	* qm/test/classes/xml_result_stream.py: Likewise.

2006-10-31  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/share/*: Merged into...
	* share/qmtest: ...here.
	* share/*: Likewise.
	* setup.py: Simplify.
	* qmdist/command/install_data.py: Adjust data_path ('qm' -> 'qmtest').
	* qm/__init__.py: Simplify.
	* qm/common.py: Remove obsolete 'is_installed' variable.
	* qm/diagnostic.py: Likewise.